Add resume navigation and hero button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>Sambhav Bhardwaj</h1>
       <ul>
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#resume">Resume</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -25,6 +26,15 @@
         I design and develop clean, responsive web interfaces using
         modern HTML and CSS, with a focus on usability and maintainable code.
       </p>
+
+      <!-- Resume Button -->
+      <a
+        href="Sambhav_Bhardwaj_Resume.pdf"
+        target="_blank"
+        class="resume-btn"
+      >
+        View Resume
+      </a>
     </section>
   </header>
 
@@ -32,7 +42,7 @@
   <section id="projects">
     <h2>Projects</h2>
 
-    <!-- FEATURED PROJECT -->
+    <!-- Featured Project -->
     <section class="featured-project">
       <h3>Featured (Solo Project)</h3>
 
@@ -53,22 +63,13 @@
       </article>
     </section>
 
-    <!-- COLLABORATIVE PROJECTS -->
+    <!-- Collaborative Projects -->
     <section class="project-row">
       <h3>Collaborative Projects</h3>
       <div class="project-track">
 
         <article class="project-card">
           <h4>An-Shi-Tong</h4>
-
-          <p class="desc">
-            Collaborative project focused on system design and implementation.
-          </p>
-
-          <div class="tech">
-            <span>Team Project</span>
-          </div>
-
           <div class="links">
             <a href="https://github.com/ap441/An-Shi-Tong" target="_blank">Code</a>
           </div>
@@ -76,15 +77,6 @@
 
         <article class="project-card">
           <h4>WasteWise</h4>
-
-          <p class="desc">
-            Team-based project addressing waste management solutions.
-          </p>
-
-          <div class="tech">
-            <span>Team Project</span>
-          </div>
-
           <div class="links">
             <a href="https://github.com/ap441/WasteWise" target="_blank">Code</a>
           </div>
@@ -92,33 +84,13 @@
 
         <article class="project-card">
           <h4>Zoonet</h4>
-
-          <p class="desc">
-            Collaborative application developed as part of a team.
-          </p>
-
-          <div class="tech">
-            <span>Team Project</span>
-          </div>
-
           <div class="links">
-            <a href="https://github.com/ArshSaxena1206/Zoonet-By-Team-Neptune-" target="_blank">
-              Code
-            </a>
+            <a href="https://github.com/ArshSaxena1206/Zoonet-By-Team-Neptune-" target="_blank">Code</a>
           </div>
         </article>
 
         <article class="project-card">
           <h4>Viaggio</h4>
-
-          <p class="desc">
-            Team project focused on application development and collaboration.
-          </p>
-
-          <div class="tech">
-            <span>Team Project</span>
-          </div>
-
           <div class="links">
             <a href="https://github.com/ap441/Viaggio" target="_blank">Code</a>
           </div>
@@ -126,7 +98,24 @@
 
       </div>
     </section>
+  </section>
 
+  <!-- Resume -->
+  <section id="resume">
+    <h2>Resume</h2>
+
+    <p>
+      Download a concise, recruiter-friendly version of my resume with
+      detailed project descriptions and technical experience.
+    </p>
+
+    <a
+      href="Sambhav_Bhardwaj_Resume.pdf"
+      target="_blank"
+      class="resume-btn"
+    >
+      Download Resume (PDF)
+    </a>
   </section>
 
   <!-- About -->
@@ -135,19 +124,8 @@
     <p>
       I focus on building clean, responsive web interfaces with a strong
       emphasis on fundamentals. I have hands-on experience developing
-      projects using HTML, CSS, JavaScript, Python, and Git, following
-      structured and maintainable coding practices.
+      projects using HTML, CSS, JavaScript, Python, and Git.
     </p>
-
-    <h3>Skills</h3>
-    <ul>
-      <li>HTML5 (Semantic Markup)</li>
-      <li>CSS3 (Flexbox, Responsive Design)</li>
-      <li>JavaScript (DOM & Interaction)</li>
-      <li>Python (Core Syntax, ML Basics)</li>
-      <li>C (Fundamentals, Problem Solving)</li>
-      <li>Git & GitHub</li>
-    </ul>
   </section>
 
   <!-- Contact -->
@@ -175,3 +153,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
