--- a/index.html
+++ b/index.html
@@ -1,156 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sambhav Bhardwaj | Web Developer</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sambhav Bhardwaj — Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <!-- Header / Hero -->
-  <header>
+<header class="hero-header">
+  <div class="hero-overlay">
+
     <nav>
       <h1>Sambhav Bhardwaj</h1>
-      <ul>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
     </nav>
 
-    <section>
-      <h2>Web Developer</h2>
-      <p>
-        I design and develop clean, responsive web interfaces using
-        modern HTML and CSS, with a focus on usability and maintainable code.
+    <div class="hero">
+      <h1 class="hero-title">Building Experiences for the Web</h1>
+      <p class="hero-subtitle">
+        AI Engineering student crafting real-world interfaces and intelligent systems.
       </p>
 
-      <!-- Resume Button -->
-      <a
-        href="Sambhav_Bhardwaj_Resume.pdf"
-        target="_blank"
-        class="resume-btn"
-      >
-        View Resume
-      </a>
-    </section>
-  </header>
-
-  <!-- Projects -->
-  <section id="projects">
-    <h2>Projects</h2>
-
-    <!-- Featured Project -->
-    <section class="featured-project">
-      <h3>Featured (Solo Project)</h3>
-
-      <article class="featured-card project-card">
-        <span class="status completed">Completed</span>
-        <h4>Classic Spam Classifier</h4>
-
-        <div class="tech">
-          <span>Python</span>
-          <span>Machine Learning</span>
-        </div>
-
-        <div class="links">
-          <a href="https://github.com/sambhavbhardwaj06/classic-spam-classifier" target="_blank">
-            Code
-          </a>
-        </div>
-      </article>
-    </section>
-
-    <!-- Collaborative Projects -->
-    <section class="project-row">
-      <h3>Collaborative Projects</h3>
-      <div class="project-track">
-
-        <article class="project-card">
-          <h4>An-Shi-Tong</h4>
-          <div class="links">
-            <a href="https://github.com/ap441/An-Shi-Tong" target="_blank">Code</a>
-          </div>
-        </article>
-
-        <article class="project-card">
-          <h4>WasteWise</h4>
-          <div class="links">
-            <a href="https://github.com/ap441/WasteWise" target="_blank">Code</a>
-          </div>
-        </article>
-
-        <article class="project-card">
-          <h4>Zoonet</h4>
-          <div class="links">
-            <a href="https://github.com/ArshSaxena1206/Zoonet-By-Team-Neptune-" target="_blank">Code</a>
-          </div>
-        </article>
-
-        <article class="project-card">
-          <h4>Viaggio</h4>
-          <div class="links">
-            <a href="https://github.com/ap441/Viaggio" target="_blank">Code</a>
-          </div>
-        </article>
-
+      <div class="hero-buttons">
+        <a href="projects.html" class="hero-btn">View Projects</a>
+        <a href="about.html" class="hero-btn">About Me</a>
+        <a href="resume.html" class="hero-btn">Resume</a>
+        <a href="contact.html" class="hero-btn">Contact</a>
       </div>
-    </section>
-  </section>
+    </div>
 
-  <!-- Resume -->
-  <section id="resume">
-    <h2>Resume</h2>
+  </div>
+</header>
 
-    <p>
-      Download a concise, recruiter-friendly version of my resume with
-      detailed project descriptions and technical experience.
-    </p>
-
-    <a
-      href="Sambhav_Bhardwaj_Resume.pdf"
-      target="_blank"
-      class="resume-btn"
-    >
-      Download Resume (PDF)
-    </a>
-  </section>
-
-  <!-- About -->
-  <section id="about">
-    <h2>About</h2>
-    <p>
-      I focus on building clean, responsive web interfaces with a strong
-      emphasis on fundamentals. I have hands-on experience developing
-      projects using HTML, CSS, JavaScript, Python, and Git.
-    </p>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact">
-    <h2>Contact</h2>
-
-    <p>
-      Email:
-      <a href="mailto:bhardwajsambhav0@gmail.com">
-        bhardwajsambhav0@gmail.com
-      </a>
-    </p>
-
-    <ul>
-      <li><a href="https://github.com/sambhavbhardwaj06" target="_blank">GitHub</a></li>
-      <li><a href="https://linkedin.com/in/sambhav-bhardwaj" target="_blank">LinkedIn</a></li>
-      <li><a href="https://x.com/SambhavBhardw18" target="_blank">Twitter (X)</a></li>
-    </ul>
-  </section>
-
-  <footer>
-    <p>© 2026 Sambhav Bhardwaj</p>
-  </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
-
