--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,16 +21,44 @@
 </header>
 
 <section id="contact">
-  <h2>Get in Touch</h2>
 
-  <ul>
-    <li><a href="mailto:bhardwajsambhav0@gmail.com">Email</a></li>
-    <li><a href="https://github.com/sambhavbhardwaj06">GitHub</a></li>
-    <li><a href="https://linkedin.com/in/sambhav-bhardwaj">LinkedIn</a></li>
-    <li><a href="https://x.com/SambhavBhardw18">Twitter</a></li>
-  </ul>
+  <h2>Contact Me</h2>
+
+  <p class="contact-text">
+    Feel free to reach out for opportunities, collaborations, or technical discussions.
+  </p>
+
+  <div class="contact-timeline">
+
+    <div class="contact-item">
+      <div class="contact-dot"></div>
+      <div class="contact-info">
+        <img src="icons/gmail.jpg" alt="Gmail">
+        <a href="mailto:bhardwajsambhav0@gmail.com">bhardwajsambhav0@gmail.com</a>
+      </div>
+    </div>
+
+    <div class="contact-item">
+      <div class="contact-dot"></div>
+      <div class="contact-info">
+        <img src="icons/github.jpg" alt="GitHub">
+        <a href="https://github.com/sambhavbhardwaj06" target="_blank">GitHub Profile</a>
+      </div>
+    </div>
+
+    <div class="contact-item">
+      <div class="contact-dot"></div>
+      <div class="contact-info">
+        <img src="icons/linkedin.jpg" alt="LinkedIn">
+        <a href="https://linkedin.com/in/sambhav-bhardwaj" target="_blank">LinkedIn Profile</a>
+      </div>
+    </div>
+
+  </div>
 
 </section>
 
+
 </body>
+
 </html>
