--- a/projects.html
+++ b/projects.html
@@ -22,68 +22,172 @@
 <section id="projects">
   <h2>Featured Work</h2>
 
-  <!-- row 1 -->
-  <div class="project-row">
-    <h3>Machine Learning</h3>
-    <div class="project-track">
+  <div class="projects-timeline">
 
-      <article class="project-card">
+    <!-- ===========================
+         ORIGINAL PROJECTS
+    ============================ -->
+
+    <!-- Spam Classifier -->
+    <div class="project-timeline-item">
+      <div class="project-dot"></div>
+      <div class="project-content">
         <span class="status completed">Completed</span>
-        <h4>Spam Classifier</h4>
-        <p class="desc">ML-powered spam detection system with TF-IDF and Logistic Regression.</p>
-        <div class="tech">
-          <span>Python</span><span>ML</span><span>TF-IDF</span>
-        </div>
-        <div class="links">
-          <a href="https://github.com/sambhavbhardwaj06/classic-spam-classifier">Code</a>
-        </div>
-      </article>
+        <h3>Spam Classifier</h3>
+        <p>ML-powered spam detection system using TF-IDF and Logistic Regression.</p>
 
+        <div class="techline">
+          <span>Python</span>
+          <span>ML</span>
+          <span>TF-IDF</span>
+        </div>
+
+        <a class="project-link" href="https://github.com/sambhavbhardwaj06/classic-spam-classifier" target="_blank">
+          View Code →
+        </a>
+      </div>
     </div>
-  </div>
 
-  <!-- row 2 -->
-  <div class="project-row">
-    <h3>Collaborative Projects</h3>
-    <div class="project-track">
-
-      <article class="project-card">
+    <!-- ZooNet -->
+    <div class="project-timeline-item">
+      <div class="project-dot"></div>
+      <div class="project-content">
         <span class="status completed">Team Project</span>
-        <h4>ZooNet</h4>
-        <p class="desc">Deep learning-based animal image classifier.</p>
-        <div class="tech">
-          <span>CNN</span><span>Python</span>
-        </div>
-        <div class="links">
-          <a href="https://github.com/ap441/Zoonet-By-Team-Neptune-">Code</a>
-        </div>
-      </article>
+        <h3>ZooNet</h3>
+        <p>Deep learning-based animal image classifier using CNN architecture.</p>
 
-      <article class="project-card">
-        <span class="status completed">Team Project</span>
-        <h4>WasteWise</h4>
-        <p class="desc">Smart waste monitoring system.</p>
-        <div class="tech">
-          <span>ML</span><span>Python</span>
-        </div>
-        <div class="links">
-          <a href="https://github.com/ap441/WasteWise">Code</a>
-        </div>
-      </article>
-
-      <article class="project-card">
-        <span class="status completed">Team Project</span>
-        <h4>Viaggio</h4>
-        <p class="desc">Travel curation system.</p>
-        <div class="tech">
+        <div class="techline">
+          <span>CNN</span>
           <span>Python</span>
         </div>
-        <div class="links">
-          <a href="https://github.com/ap441/Viaggio">Code</a>
-        </div>
-      </article>
 
+        <a class="project-link" href="https://github.com/ap441/Zoonet-By-Team-Neptune-" target="_blank">
+          View Code →
+        </a>
+      </div>
     </div>
+
+    <!-- WasteWise -->
+    <div class="project-timeline-item">
+      <div class="project-dot"></div>
+      <div class="project-content">
+        <span class="status completed">Team Project</span>
+        <h3>WasteWise</h3>
+        <p>Smart waste monitoring and detection system for improved waste management.</p>
+
+        <div class="techline">
+          <span>ML</span>
+          <span>Python</span>
+        </div>
+
+        <a class="project-link" href="https://github.com/ap441/WasteWise" target="_blank">
+          View Code →
+        </a>
+      </div>
+    </div>
+
+    <!-- Viaggio -->
+    <div class="project-timeline-item">
+      <div class="project-dot"></div>
+      <div class="project-content">
+        <span class="status completed">Team Project</span>
+        <h3>Viaggio</h3>
+        <p>Travel curation platform for personalized destination recommendations.</p>
+
+        <div class="techline">
+          <span>Python</span>
+        </div>
+
+        <a class="project-link" href="https://github.com/ap441/Viaggio" target="_blank">
+          View Code →
+        </a>
+      </div>
+    </div>
+
+    <!-- ===========================
+         NEW PROJECTS ADDED
+    ============================ -->
+
+    <!-- Portfolio Site -->
+    <div class="project-timeline-item">
+      <div class="project-dot"></div>
+      <div class="project-content">
+        <span class="status completed">Completed</span>
+        <h3>Portfolio Site</h3>
+        <p>A modern personal website built to showcase my skills, experience, and projects.</p>
+
+        <div class="techline">
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>JavaScript</span>
+        </div>
+
+        <a class="project-link" href="https://github.com/sambhavbhardwaj06/portfolio-site" target="_blank">
+          View Code →
+        </a>
+      </div>
+    </div>
+
+    <!-- E-Commerce -->
+    <div class="project-timeline-item">
+      <div class="project-dot"></div>
+      <div class="project-content">
+        <span class="status completed">Completed</span>
+        <h3>E-Commerce Platform</h3>
+        <p>A full-featured e-commerce web application for browsing, adding, and purchasing products.</p>
+
+        <div class="techline">
+          <span>Next.js</span>
+          <span>TypeScript</span>
+          <span>Tailwind CSS</span>
+        </div>
+
+        <a class="project-link" href="https://github.com/sambhavbhardwaj06/e-commerece" target="_blank">
+          View Code →
+        </a>
+      </div>
+    </div>
+
+    <!-- Expense Tracker -->
+    <div class="project-timeline-item">
+      <div class="project-dot"></div>
+      <div class="project-content">
+        <span class="status completed">Completed</span>
+        <h3>Expense Tracker</h3>
+        <p>A simple and efficient app for tracking daily and monthly expenses.</p>
+
+        <div class="techline">
+          <span>Next.js</span>
+          <span>TypeScript</span>
+          <span>Tailwind CSS</span>
+        </div>
+
+        <a class="project-link" href="https://github.com/sambhavbhardwaj06/my-app" target="_blank">
+          View Code →
+        </a>
+      </div>
+    </div>
+
+    <!-- An-Shi-Tong -->
+    <div class="project-timeline-item">
+      <div class="project-dot"></div>
+      <div class="project-content">
+        <span class="status completed">Completed</span>
+        <h3>An-Shi-Tong</h3>
+        <p>Automated video surveillance system powered by intelligent video analysis.</p>
+
+        <div class="techline">
+          <span>Next.js</span>
+          <span>TypeScript</span>
+          <span>Tailwind CSS</span>
+        </div>
+
+        <a class="project-link" href="https://github.com/ap441/An-Shi-Tong" target="_blank">
+          View Code →
+        </a>
+      </div>
+    </div>
+
   </div>
 
 </section>
