--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
     Download the full PDF for a comprehensive view.
   </p>
 
-  <a href="Sambhav_Bhardwaj_Resume.pdf" class="resume-download" download>
+  <a href="Sambhav_Bhardwaj_Resume_2025.pdf" class="resume-download" download>
     ⬇ Download Full Resume (PDF)
   </a>
 
